fix background image on mobile

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -2,12 +2,13 @@
  width: 100%;
  min-height: 100vh;
  background: linear-gradient(rgba(8,0,58,0.7), rgba(8,0,58,0.7)), 
-    url('../../assets/summerlee.webp') no-repeat center center fixed; 
+    url('../../assets/summerlee.webp') no-repeat center center; 
  background-size: cover;
  color: #fff;
  display: flex;
  align-items: center;
  justify-content: center;
+ background-attachment: fixed;
 }
 
 .hero-text{
